--- a/index.html
+++ b/index.html
@@ -24,4 +24,5 @@
     <script src="config/index.js"></script>
     <script src="config/router.js"></script>
     <script src="config/component.js"></script>
+    <script src="application/controller/home.js"></script>
 </html>
